--- a/src/css/sidebar/sidebar.css
+++ b/src/css/sidebar/sidebar.css
@@ -5,7 +5,9 @@
   flex-shrink: 0;
   background: white;
   overflow-y: auto;
-  height: 93vh;
+  min-height: 100%;
+
+  /*height: 93vh;*/
 }
 .sidebar--hidden {
   display: none;
